# Vanadium

./: README.md  args.gn  generate-release
patches/: 0002-Vanadium-branding.patch  0007-add-support-for-appending-build-flags-for-Vanadium.patch  0009-switch-to-fstack-protector-strong.patch  0013-Only-enable-shadow_call_stack-on-android-arm64-targe.patch  0014-Use-fstack-protector-strong-with-shadow-call-stack-w.patch  0015-Checkout-PGO-profiles.patch  0015-disable-seed-based-field-trials.patch  0017-disable-seed-based-field-trials.patch  0019-disable-WebView-variations-support.patch  0020-disable-Media-Integrity-blink-extension-API-on-webvi.patch  0021-disable-navigation-error-correction-by-default.patch  0022-disable-contextual-search-by-default.patch  0025-disable-hyperlink-auditing-by-default.patch  0029-disable-sensors-access-by-default.patch  0030-ask-before-playing-protected-media-by-default.patch  0032-disable-background-sync-by-default.patch  0035-disable-media-router-by-default.patch  0036-disable-offering-translations-by-default.patch  0037-disable-browser-sign-in-feature-by-default.patch  0040-disable-media-DRM-preprovisioning-by-default.patch  0041-disable-autofill-server-communication-by-default.patch  0043-disable-search-provider-logo.patch  0048-Disable-adding-a-signed-out-avatar-on-new-tab-pages-.patch  0049-Disable-newer-privacy-sandbox-features-by-default.patch  0050-Disable-WebGPU-in-Android-by-default.patch  0052-always-use-local-new-tab-page.patch  0054-most-private-WebRTC-IP-handling-policy-by-default.patch  0060-disable-appending-variations-header.patch  0062-disable-fetching-optimization-guides-by-default.patch  0063-Disable-tab-group-sync-settings-UI-by-default.patch  0064-disable-fetching-optimization-hints-by-default.patch  0065-disable-more-optimization-guides-features-by-default.patch  0066-disable-network-time-tracker-by-default.patch  0067-Disable-opening-PDF-in-the-app-by-default.patch  0068-set-default-search-engine-to-DuckDuckGo.patch  0069-set-original-package-to-org.chromium.chrome.patch  0070-Make-HTTPS-only-mode-the-default.patch  0071-require-HTTPS-for-component-updates.patch  0073-enable-memory-tagging-in-all-processes.patch  0074-enable-split-cache-by-default.patch  (+91 more)
